--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.o3dr.android:dronekit-android:2.7.0'
+    compile 'com.o3dr.android:dronekit-android:2.8.0'
+    compile 'com.github.MKergall.osmbonuspack:OSMBonusPack:v5.7'
 }
